Replace List.getFirst with index access in fletcher distribution